--- a/source/pages/addpingjia/addpingjia.wxml
+++ b/source/pages/addpingjia/addpingjia.wxml
@@ -1,4 +1,4 @@
-<view style="background:#FFFFFF;margin:10px;border-radius: 10px;">
+<view style="background:#fafafa;margin:10px;border-radius: 10px;">
   
 <view class="margin-30">
   <view class="image_boxs">
