--- a/source/pages/addpingjia/addpingjia.wxss
+++ b/source/pages/addpingjia/addpingjia.wxss
@@ -35,7 +35,7 @@ page{
 .fixbottom {
     width: 100vw;
     padding: 20rpx 0;
-    background: #FFFFFF;
+    background: #fafafa;
     position: fixed;
     left: 0;
     bottom: 0;
