--- a/source/pages/giftcards/giftcards.wxml
+++ b/source/pages/giftcards/giftcards.wxml
@@ -1,6 +1,6 @@
 <!--pages/giftcards/giftcards.wxml-->
 
-<view class="flex-row flex-column" style="background-color: rgba(243, 246, 247, 1); position: relative; min-height: 100vh;">
+<view class="flex-row flex-column" style="background-color:#fafafa; position: relative; min-height: 100vh;">
   <view class="flex-row navbox">
     <view class="flex-1  flex-row flex-column" wx:for="{{typelist}}" wx:key='k' bindtap="switchtype" id="{{item.value}}">
       <view class="f-28 text-center titlebox">{{item.name}}</view>
