--- a/source/pages/kuaididanhao/kuaididanhao.wxss
+++ b/source/pages/kuaididanhao/kuaididanhao.wxss
@@ -12,7 +12,7 @@ page {
     margin: 15px;
 }
 .input_box{
-    background: #FFFFFF;
+    background: #fafafa;
 }
 .input_main{
     width: 100%;
@@ -39,7 +39,7 @@ color: #333333;
 .fixbottom {
     width: 100vw;
     padding: 20rpx 0;
-    background: #FFFFFF;
+    background: #fafafa;
     position: fixed;
     left: 0;
     bottom: 0;
