--- a/source/pages/mall/mall.wxml
+++ b/source/pages/mall/mall.wxml
@@ -18,7 +18,7 @@
     <view class="flex-row">
         <view class="flex-1 flex-row flex-column">
             <view bindtap="navigateto" id='/pages/malldetail/malldetail?id={{item.id}}' wx:for="{{goodslist}}" wx:key='k' wx:for-index="idx" wx:if="{{idx%2==0}}" class="goods border-bg margin-bottom-25">
-                <view class="h120"></view>
+                <view class="height-70"></view>
                 <view class="flex-row flex-column">
                     <image src="{{uploadpath}}mall/{{item.cover}}" class="cover" ></image>
                 </view>
@@ -34,7 +34,7 @@
         </view>
         <view class="flex-1 flex-row flex-column">
             <view bindtap="navigateto" id='/pages/malldetail/malldetail?id={{item.id}}' wx:for="{{goodslist}}" wx:key='k' wx:for-index="idx" wx:if="{{idx%2!=0}}" class="goods border-bg margin-bottom-25">
-                <view class="h120"></view>
+                <view class="height-70"></view>
                 <view class="flex-row flex-column">
                     <image src="{{uploadpath}}mall/{{item.cover}}" class="cover"></image>
                 </view>
