--- a/source/app.wxss
+++ b/source/app.wxss
@@ -434,7 +434,9 @@ button[disabled][type=primary] {
 .padding-left-20 {
   padding-left: 20rpx;
 }
-
+.margin-left-25 {
+  margin-left: 25rpx;
+}
 .padding-left-30 {
   padding-left: 30rpx;
 }
