--- a/source/pages/activity/activity.wxss
+++ b/source/pages/activity/activity.wxss
@@ -20,7 +20,7 @@
 }
 .answer{
     width: 100%; 
-    height: 112rpx;
+    height: 60rpx;
     /* width: 90%;
     height: 70rpx; */
     border-bottom: 1px solid rgba(225, 227, 230, 0.6);
@@ -28,12 +28,19 @@
     color: rgba(102, 102, 102, 1)
 }
 .btns {
-    width: 100%rpx;
+    width: 90%;
     line-height: 92rpx;
     border-radius: 48rpx;
     color: #FFFFFF;
     font-size: 32rpx;
     text-align: center;
+    /* border: none; */
+    position: fixed;
+    bottom: 70rpx;
+    margin-left: 3.5%;
+}
+button::after{
+  border: none;
 }
 .selectbox{
     width: 100vw;
@@ -49,12 +56,12 @@
 .selectcontent{
     width: 750rpx;
      line-height: 112rpx;
-    background-color: #FFFFFF;
+    background-color: #fafafa;
 }
 .disable{
     height: 180rpx;
     width: 750rpx;
-    background-color: #FFFFFF;
+    background-color: #fafafa;
 }
 .content{
     width: 700rpx !important;
