--- a/source/pages/feedback/feedback.wxss
+++ b/source/pages/feedback/feedback.wxss
@@ -24,7 +24,7 @@
 .fixbottom {
     width: 100vw;
     padding: 20rpx 0;
-    background: #FFFFFF;
+    background: #fafafa;
     position: fixed;
     left: 0;
     bottom: 0;
