--- a/source/pages/malldetail/malldetail.wxml
+++ b/source/pages/malldetail/malldetail.wxml
@@ -23,8 +23,8 @@
     <view class="title_top_text">{{info.sales}}人已付款</view>
   </view>
   <view class="f-36 titele_top_main" style="color:#3A3A3A;">{{info.name}}</view>
-  <view class="margin-top-28 margin-left-20 margin-right-20">
-    <text class="f-26 txt-99 titele_top_main">{{info.summary}}</text>
+  <view class=" margin-left-30 margin-right-20">
+    <text class="f-26 txt-99 ">{{info.summary}}</text>
   </view>
 
   <view class="flex-row flex-bottom titele_top_main">
@@ -135,14 +135,14 @@
       <view style="color: #333333;margin-left: 10px;font-weight:500;font-size:16px;">规格</view>
       <view class="guige">
         <!-- 渲染 -->
-        <view class="one_guige  {{norms == item.id?'one_guige1':'one_guige' }}" data-price="{{item.price}}" data-id="{{item.id}}" bindtap="getnorms" wx:for="{{info.guige}}">
+        <view class="one_guige  {{norms == item.id?'one_guige1':'one_guige' }}" data-price="{{item.price}}" data-id="{{item.id}}" data-yunfei="{{item.yunfei}}" bindtap="getnorms" wx:for="{{info.guige}}">
           {{item.name}}
         </view>
 
       </view>
     </view>
     <view class="numbox">
-      <view>数量</view>
+      <view style="color: #333333;font-weight:500;font-size:16px;">数量</view>
       <view class="num_btn_box">
         <view class="btn_s btn_1" wx:if="{{quantity == 1}}">-</view>
         <view class="btn_s btn_3" bindtap="reducequantity" wx:else>-</view>
