--- a/source/pages/my/my.wxss
+++ b/source/pages/my/my.wxss
@@ -15,7 +15,7 @@
     width: 86rpx;
     height: 86rpx;
     border-radius: 50%;
-    background: #ffffff;
+    background: #fafafa;
     border: 2rpx solid #E6E6E6;
     margin-right: 28rpx;
 }
@@ -46,7 +46,7 @@
 }
 .mybox {
     width: 100%;
-   background: #F5F5F5;
+   background: #fafafa;
    border-radius: 40rpx;
    position: relative;
    margin-top: -90rpx;
@@ -80,7 +80,7 @@
 
 .orderbox {
     margin: 15rpx 30rpx;
-    background: #ffffff;
+    background: white;
     box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
     border-radius: 20rpx;
     padding: 24rpx 0 42rpx;
@@ -89,7 +89,7 @@
 
 .lipin {
     margin: 15rpx 30rpx;
-    background: #FFFFFF;
+    background: white;
     box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
     border-radius: 12rpx;
     padding: 38rpx 0 38rpx 28rpx;
@@ -105,7 +105,7 @@
 .timian {
    margin: 0 10rpx 15rpx 28rpx;
    padding: 28rpx 28rpx;
-    background: #FFFFFF;
+    background: white;
     box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
     border-radius: 12rpx;
     position: relative;
@@ -121,7 +121,7 @@
 .pinjian {
     margin: 0 30rpx 15rpx 10rpx;
     padding: 28rpx 28rpx;
-    background: #FFFFFF;
+    background: white;
     box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
     border-radius: 12rpx;
     position: relative;
@@ -142,7 +142,7 @@
 .fuwu {
     margin: 15rpx 30rpx;
     padding: 28rpx;
-    background: #FFFFFF;
+    background: white;
     box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
     border-radius: 20rpx;
 }
