--- a/source/pages/myactivity/myactivity.wxml
+++ b/source/pages/myactivity/myactivity.wxml
@@ -1,14 +1,14 @@
 <!--pages/myactivity/myactivity.wxml-->
 <view class="flex-row flex-center  fixtop">
     <view wx:for="{{typelist}}" wx:key='k' bindtap="switchtype" id="{{item.value}}" class="flex-1 flex-row flex-column">
-        <view class="f-28  {{item.value==statusbaoming?'txt-33 fw500':'txt-88'}}">{{item.name}}</view>
+        <view class="f-28  {{item.value==statusbaoming?'txt-33':'txt-88'}}">{{item.name}}</view>
         <view class="typeline {{item.value==statusbaoming?'typelist_act':''}}"></view>
     </view>
 </view>
 
-<view class="height-100"></view>
+<view class="height-100" style="background-color: #fafafa;"></view>
 
-<view>
+<view style="background-color: #fafafa;">
     <view class="flex-row kongbaitips min-height-90" wx:if="{{baominglist.length<=0}}">
         <image src="{{uploadpath}}resource/{{res.kongbaiyetubiao}}"></image>
     </view>
