--- a/source/pages/mypingjia/mypingjia.wxss
+++ b/source/pages/mypingjia/mypingjia.wxss
@@ -1,7 +1,7 @@
 /* pages/mypingjia/mypingjia.wxss */
 .pingjiabox {
     width: 700rpx;
-    background: #FFFFFF;
+    background: #fafafa;
     box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.08);
     border-radius: 12px;
     margin: 18rpx;
