--- a/source/pages/myshouyi/myshouyi.wxml
+++ b/source/pages/myshouyi/myshouyi.wxml
@@ -1,5 +1,5 @@
 <!--pages/myshouyi/myshouyi.wxml-->
-<view class="flex-row flex-column" style="background-color: rgba(243, 246, 247, 1); min-height: 100vh;">
+<view class="flex-row flex-column" style="background-color: #fafafa; min-height: 100vh;">
     <view class="flex-row flex-column" style="width: 700rpx; height: 220rpx;border-radius: 12px;  background-color: #fff; margin-top: 24rpx;align-items: center; justify-content: center;">
         <view class="flex-row" style="width: 100%;">
             <view class="flex-1 flex-row flex-column">
@@ -61,9 +61,9 @@
                         <view class="f-24 txt-66">加入时间 {{item.bangtime}}</view>
                     </view>
                 </view>
-               
-                <view  style="border-bottom: 2px solid #E6E6E6;" wx:if="{{index+1 != fenxiaouser.length}}"></view>
+                <view class="margin-right-40"  style="border-bottom: 1rpx solid #E6E6E6;" wx:if="{{index+1 != fenxiaouser.length}}"></view>
             </view>
+
         </view>
     </view>
 </view>
