--- a/source/pages/orderlist/orderlist.wxss
+++ b/source/pages/orderlist/orderlist.wxss
@@ -8,7 +8,7 @@ page{
     top: 0;
     left: 0;
     z-index: 10;
-    background: #ffffff;
+    background: #fafafa;
     padding-top: 40rpx;
 }
 .typeline {
@@ -26,7 +26,7 @@ page{
 .orderbox {
     margin: 10px 24rpx ;
 
-    background: #FFFFFF;
+    background: white;
     border-radius: 20rpx;
 }
 .goods_img {
