--- a/source/pages/refundlist/refundlist.wxss
+++ b/source/pages/refundlist/refundlist.wxss
@@ -8,7 +8,7 @@ page{
     top: 0;
     left: 0;
     z-index: 10;
-    background: #ffffff;
+    background: #fafafa;
     padding-top: 40rpx;
 }
 .typeline {
@@ -26,7 +26,7 @@ page{
 .orderbox {
     margin: 20rpx 24rpx ;
     padding: 30rpx 24rpx;
-    background: #FFFFFF;
+    background: #fafafa;
     border-radius: 20rpx;
 }
 .goods_img {
