--- a/source/pages/shopcar/shopcar.wxss
+++ b/source/pages/shopcar/shopcar.wxss
@@ -5,7 +5,7 @@ page {
 .shopcar_box {
   width: 100%;
   height: 50px;
-  background-color: #FFFFFF;
+  background-color: #fafafa;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -32,7 +32,7 @@ page {
 .main_box {
   width: 95%;
   margin: 0 auto;
-  background-color: #FFFFFF;
+  background-color: #fafafa;
   margin-top: 10px;
   display: flex;
   border-radius: 10px;
@@ -95,7 +95,7 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
   bottom: 0;
   width: 100%;
   height: 10%;
-  background-color: #FFFFFF;
+  background-color: #fafafa;
   z-index: 100;
   display: flex;
   align-items: center;
@@ -106,7 +106,7 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
   bottom: 0;
   width: 100%;
   height: 10%;
-  background-color: #FFFFFF;
+  background-color: #fafafa;
   z-index: 100;
   display: flex;
   align-items: center;
@@ -141,6 +141,8 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
   font-weight: 400;
   color: #999999;
   margin-bottom: 10px;
+  padding-left: 10rpx;
+  padding-top: 2rpx;
 }
 
 .shop_car_tc {
@@ -247,7 +249,7 @@ align-items: center;
 }
 .queren1{
     
-background: #FFFFFF;
+background: #fafafa;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -266,7 +268,7 @@ background: #FFFFFF;
 .shopacr_bottom_tc1{
   width: 108px;
 height: 40px;
-background: #FFFFFF;
+background: #fafafa;
 border-radius: 20px;
 border: 1px solid #CCCCCC;
 }
