--- a/source/pages/shouyitixian/shouyitixian.wxss
+++ b/source/pages/shouyitixian/shouyitixian.wxss
@@ -7,7 +7,7 @@
 .tixianbox {
     width: 700rpx;
     height: 500rpx;
-    background: #FFFFFF;
+    background: #fafafa;
     box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.18);
     border-radius: 12px;
     margin-left: 30rpx;
