--- a/source/pages/videolist/videolist.wxml
+++ b/source/pages/videolist/videolist.wxml
@@ -9,10 +9,13 @@
 	 id='{{idx}}'
 	>
 		<image src="{{uploadpath}}onlinevideo/{{item.cover}}" class="videoimg" />
-		<view class="title">
+		<view wx:if="{{item.name!=''}}" class="title">
 			<view class="">{{item.name}}</view>
 		</view>
 	</view>
+
+
+
 </view>
 <!-- 点击返回视频播放 -->
 <view
