--- a/source/pages/videolist/videolist.wxss
+++ b/source/pages/videolist/videolist.wxss
@@ -2,8 +2,8 @@
 
 .pore{
     position: relative;
-    margin: 18rpx 24rpx 0;
-    padding-bottom: 72rpx;
+    margin: 0rpx 24rpx 0rpx 24rpx;
+    padding-bottom: 30rpx;
 }
 .videoimg {
     width: 702rpx;
@@ -12,12 +12,12 @@
 
 .title{
     max-width: 548rpx;
-    padding: 26rpx;
-    background: #ffffff;
+    padding: 20rpx;
+    background: #fafafa;
     box-shadow: 0 0 24rpx 0 rgba(0,0,0,0.18);
     border-radius: 12rpx;
     position: absolute;
-    bottom: 22rpx;
+    bottom: 15rpx;
     left: 52rpx;
     z-index: 1;
 }
